Provide releaseVersion schema to use in openapi
